# Advents_of_code

./: .gitignore  README.md
2022/: day03_1.py  day03_2py  day04.py  day05_1.py  day05_2py  day06.py  day07.py  day08_1.py  day08_2.py  day10.py  day12.py  day13.py
2023/: Makefile  day01_1.c  day01_2.c  day02_1.c  day02_2.c  day03_1.c  day03_2.c  day04_1.c  day04_2.c  day05_2.c
2024/: flake.nix
2025/: .gitignore  aoc25.install  aoc25.opam  dune-project  shell.nix
2025/lib/: grids.ml  intervals.ml  parsers.ml  vec.ml  vec2.ml
2025/lib/parsercombinators/: dune  parsers.ml
